--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@tailwindcss/vite": "^4.0.6",
 		"astro": "^5.3.0",
 		"astro-auto-import": "^0.4.4",
+		"astro-cloudinary": "^1.3.2",
 		"astro-icon": "^1.1.4",
 		"astro-seo": "^0.8.4",
 		"tailwindcss": "^4.0.6"
