--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"astro-cloudinary": "^1.3.2",
 		"astro-icon": "^1.1.4",
 		"astro-seo": "^0.8.4",
+		"imagesloaded": "^5.0.0",
+		"masonry-layout": "^4.2.2",
 		"tailwindcss": "^4.0.6"
 	},
 	"devDependencies": {
